# beavercds

./: README.rst  pyproject.toml
.github/workflows/: ci.yml
classDocs/: softwareDevelopmentProcess.md
docs/: challenge.rst
docs/backends/: index.rst
docs/backends/k8s/: index.rst
rcds/backends/k8s/: manifests.py
rcds/backends/rctf/: rctf.py
tests/challenge/: test_docker.py
