[tool.poetry]
name = "rcds"
version = "0.1.4"
description = "An automated CTF challenge deployment tool"
readme = "README.rst"
authors = ["redpwn <contact@redpwn.net>"]
homepage = "https://rcds.redpwn.net"
repository = "https://github.com/redpwn/rCDS"
license = "BSD-3-Clause"
packages = [
    { include = "rcds" },
]

[tool.poetry.scripts]
rcds = "rcds.cli:cli"

[tool.poetry.dependencies]
python = "^3.10.0"
pyyaml = "^6.0.1"
pathspec = "^0.11.2"
docker = "^4.3.1"
jsonschema = "^3.2.0"
Jinja2 = ">=2.11.2,<4.0.0"
kubernetes = "^12.0.0"
requests = "^2.24.0"
requests-toolbelt = "^0.9.1"
click = "^8.1.7"

# Docs build dependencies
sphinx = { version = "^7.2.6", optional = true }
sphinx_rtd_theme = { version = "^0.5.0", optional = true }
sphinx-jsonschema = { version = "^1.15", optional = true }



[tool.poetry.dev-dependencies]
pre-commit = { version = "^2.12.1", python = "^3.10.0" }
black = "^23.11.0"
pytest = "^6.2.3"
coverage = "^5.5"
mypy = "^1.7.1"
flake8 = "^6.1.0"
flake8-bugbear = "^21.4.3"
pytest-datadir = "^1.3.1"
isort = "^5.8.0"
types-requests = "^2.31.0"
types-pyyaml = "^6.0.12.12"
types-jsonschema = "^4.20.0.0"

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme", "sphinx-jsonschema"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
